parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CAPT
    COL
    DIGIT
    DIGITS
    LETTER

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SC programa_a bloque
Rule 2     programa_a -> programa_b
Rule 3     programa_a -> programa_b programa_a
Rule 4     programa_a -> empty
Rule 5     programa_b -> vars
Rule 6     programa_b -> vars_vect_mat
Rule 7     vars -> tiposimple vars_a SC
Rule 8     vars -> tipocompuesto vars_a SC
Rule 9     vars_a -> vars_b
Rule 10    vars_a -> vars_c vars_a
Rule 11    vars_b -> ID
Rule 12    vars_b -> ID EQ expresion
Rule 13    vars_c -> vars_b COMMA
Rule 14    vars_vect_mat -> vars_vect_mat_b vars_vect_mat_a SC
Rule 15    vars_vect_mat -> vars_vect_mat_b vars_vect_mat_a vars_vect_mat_d SC
Rule 16    vars_vect_mat_a -> vars_vect_mat_c exp CSB
Rule 17    vars_vect_mat_b -> tiposimple ID
Rule 18    vars_vect_mat_c -> OSB
Rule 19    vars_vect_mat_d -> OSB exp CSB
Rule 20    m_exp -> m_exp_b
Rule 21    m_exp -> m_exp_b m_exp_a m_exp
Rule 22    m_exp_a -> ADD
Rule 23    m_exp_a -> SUB
Rule 24    m_exp_b -> term
Rule 25    term -> term_b
Rule 26    term -> term_b term_a term
Rule 27    term_a -> MULT
Rule 28    term_a -> DIV
Rule 29    term_b -> fact
Rule 30    tiposimple -> INT
Rule 31    tiposimple -> FLOAT
Rule 32    tiposimple -> CHAR
Rule 33    tipocompuesto -> DATAFRAME
Rule 34    tipocompuesto -> ID
Rule 35    tipocompuesto -> FILE
Rule 36    bloque -> OB bloque_a CB
Rule 37    bloque_a -> estatuto bloque_a
Rule 38    bloque_a -> estatuto
Rule 39    bloque_a -> empty
Rule 40    estatuto -> asignacion
Rule 41    estatuto -> condicion
Rule 42    estatuto -> llamada SC
Rule 43    estatuto -> while
Rule 44    estatuto -> for
Rule 45    estatuto -> classcreate
Rule 46    estatuto -> vars
Rule 47    estatuto -> classdeclare
Rule 48    estatuto -> llamadafuncionclase
Rule 49    estatuto -> function
Rule 50    estatuto -> return
Rule 51    estatuto -> print
Rule 52    return -> RETURN expresion SC
Rule 53    expresion -> m_exp
Rule 54    expresion -> m_exp expresion_a m_exp
Rule 55    expresion_a -> LT
Rule 56    expresion_a -> GT
Rule 57    expresion_a -> NE
Rule 58    expresion_a -> EQEQ
Rule 59    expresion_a -> LE
Rule 60    expresion_a -> GE
Rule 61    varcte -> ID
Rule 62    varcte -> CTE_I
Rule 63    varcte -> CTE_F
Rule 64    while -> while_b bloque
Rule 65    while_a -> WHILE
Rule 66    while_b -> while_a OP expresion CP
Rule 67    exp -> and_exp
Rule 68    exp -> exp_b exp
Rule 69    exp_b -> and_exp OR
Rule 70    and_exp -> expresion
Rule 71    and_exp -> and_exp_b and_exp
Rule 72    and_exp_b -> expresion AND
Rule 73    for -> for_a for_b bloque
Rule 74    for_a -> FOR
Rule 75    for_b -> for_e asignacionsencilla CP
Rule 76    for_c -> OP asignacionsencilla SC
Rule 77    for_d -> for_c expresion
Rule 78    for_e -> for_d SC
Rule 79    llamada -> llamada_d llamada_a CP
Rule 80    llamada_a -> llamada_e llamada_b
Rule 81    llamada_a -> llamada_b
Rule 82    llamada_b -> llamada_f llamada_a
Rule 83    llamada_b -> empty
Rule 84    llamada_c -> ID
Rule 85    llamada_d -> llamada_c OP
Rule 86    llamada_e -> expresion
Rule 87    llamada_e -> CTE_STRING
Rule 88    llamada_f -> COMMA
Rule 89    print -> PRINT OP expresion CP SC
Rule 90    fact -> OP fact_a exp CP
Rule 91    fact -> CTE_I
Rule 92    fact -> CTE_F
Rule 93    fact -> CTE_CHAR
Rule 94    fact -> ID
Rule 95    fact -> llamada
Rule 96    fact -> array_access
Rule 97    fact_a -> empty
Rule 98    classcreate -> CLASS CLASS_ID OB classcreate_a function classcreate_c CB
Rule 99    classcreate_a -> vars classcreate_a
Rule 100   classcreate_a -> vars_vect_mat classcreate_a
Rule 101   classcreate_a -> empty
Rule 102   classcreate_c -> function classcreate_d
Rule 103   classcreate_c -> classcreate_d
Rule 104   classcreate_d -> classcreate_c
Rule 105   classcreate_d -> empty
Rule 106   condicion -> condicion_c bloque condicion_a
Rule 107   condicion_a -> condicion_d condicion_b bloque
Rule 108   condicion_a -> empty
Rule 109   condicion_b -> condicion
Rule 110   condicion_b -> empty
Rule 111   condicion_c -> IF OP exp CP
Rule 112   condicion_d -> ELSE
Rule 113   classdeclare -> CLASS_ID ID SC
Rule 114   llamadafuncionclase -> ID POINT llamada
Rule 115   asignacion -> ID EQ expresion SC
Rule 116   asignacion -> array_access EQ expresion SC
Rule 117   asignacionsencilla -> ID EQ expresion
Rule 118   function -> DEF function_e bloque
Rule 119   function_a -> VOID
Rule 120   function_a -> tiposimple
Rule 121   function_b -> function_d
Rule 122   function_b -> function_d COMMA function_b
Rule 123   function_b -> empty
Rule 124   function_c -> function_a ID
Rule 125   function_d -> tiposimple ID
Rule 126   function_e -> function_c OP function_b CP vars
Rule 127   function_e -> function_c OP function_b CP empty
Rule 128   array_access -> array_access_c array_access_d exp CSB
Rule 129   array_access -> array_access_c
Rule 130   array_access_a -> ID
Rule 131   array_access_b -> array_access_a OSB
Rule 132   array_access_c -> array_access_b exp CSB
Rule 133   array_access_d -> OSB
Rule 134   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 22
AND                  : 72
CAPT                 : 
CB                   : 36 98
CHAR                 : 32
CLASS                : 98
CLASS_ID             : 98 113
COL                  : 
COMMA                : 13 88 122
CP                   : 66 75 79 89 90 111 126 127
CSB                  : 16 19 128 132
CTE_CHAR             : 93
CTE_F                : 63 92
CTE_I                : 62 91
CTE_STRING           : 87
DATAFRAME            : 33
DEF                  : 118
DIGIT                : 
DIGITS               : 
DIV                  : 28
ELSE                 : 112
EQ                   : 12 115 116 117
EQEQ                 : 58
FILE                 : 35
FLOAT                : 31
FOR                  : 74
GE                   : 60
GT                   : 56
ID                   : 1 11 12 17 34 61 84 94 113 114 115 117 124 125 130
IF                   : 111
INT                  : 30
LE                   : 59
LETTER               : 
LT                   : 55
MULT                 : 27
NE                   : 57
OB                   : 36 98
OP                   : 66 76 85 89 90 111 126 127
OR                   : 69
OSB                  : 18 19 131 133
POINT                : 114
PRINT                : 89
PROGRAM              : 1
RETURN               : 52
SC                   : 1 7 8 14 15 42 52 76 78 89 113 115 116
SUB                  : 23
VOID                 : 119
WHILE                : 65
error                : 

Nonterminals, with rules where they appear

and_exp              : 67 69 71
and_exp_b            : 71
array_access         : 96 116
array_access_a       : 131
array_access_b       : 132
array_access_c       : 128 129
array_access_d       : 128
asignacion           : 40
asignacionsencilla   : 75 76
bloque               : 1 64 73 106 107 118
bloque_a             : 36 37
classcreate          : 45
classcreate_a        : 98 99 100
classcreate_c        : 98 104
classcreate_d        : 102 103
classdeclare         : 47
condicion            : 41 109
condicion_a          : 106
condicion_b          : 107
condicion_c          : 106
condicion_d          : 107
empty                : 4 39 83 97 101 105 108 110 123 127
estatuto             : 37 38
exp                  : 16 19 68 90 111 128 132
exp_b                : 68
expresion            : 12 52 66 70 72 77 86 89 115 116 117
expresion_a          : 54
fact                 : 29
fact_a               : 90
for                  : 44
for_a                : 73
for_b                : 73
for_c                : 77
for_d                : 78
for_e                : 75
function             : 49 98 102
function_a           : 124
function_b           : 122 126 127
function_c           : 126 127
function_d           : 121 122
function_e           : 118
llamada              : 42 95 114
llamada_a            : 79 82
llamada_b            : 80 81
llamada_c            : 85
llamada_d            : 79
llamada_e            : 80
llamada_f            : 82
llamadafuncionclase  : 48
m_exp                : 21 53 54 54
m_exp_a              : 21
m_exp_b              : 20 21
print                : 51
programa             : 0
programa_a           : 1 3
programa_b           : 2 3
return               : 50
term                 : 24 26
term_a               : 26
term_b               : 25 26
tipocompuesto        : 8
tiposimple           : 7 17 120 125
varcte               : 
vars                 : 5 46 99 126
vars_a               : 7 8 10
vars_b               : 9 13
vars_c               : 10
vars_vect_mat        : 6 100
vars_vect_mat_a      : 14 15
vars_vect_mat_b      : 14 15
vars_vect_mat_c      : 16
vars_vect_mat_d      : 15
while                : 43
while_a              : 66
while_b              : 64

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SC programa_a bloque

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SC programa_a bloque

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SC programa_a bloque

    SC              shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SC . programa_a bloque
    (2) programa_a -> . programa_b
    (3) programa_a -> . programa_b programa_a
    (4) programa_a -> . empty
    (5) programa_b -> . vars
    (6) programa_b -> . vars_vect_mat
    (134) empty -> .
    (7) vars -> . tiposimple vars_a SC
    (8) vars -> . tipocompuesto vars_a SC
    (14) vars_vect_mat -> . vars_vect_mat_b vars_vect_mat_a SC
    (15) vars_vect_mat -> . vars_vect_mat_b vars_vect_mat_a vars_vect_mat_d SC
    (30) tiposimple -> . INT
    (31) tiposimple -> . FLOAT
    (32) tiposimple -> . CHAR
    (33) tipocompuesto -> . DATAFRAME
    (34) tipocompuesto -> . ID
    (35) tipocompuesto -> . FILE
    (17) vars_vect_mat_b -> . tiposimple ID

    OB              reduce using rule 134 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    ID              shift and go to state 5
    FILE            shift and go to state 18

    programa_a                     shift and go to state 6
    programa_b                     shift and go to state 7
    empty                          shift and go to state 8
    vars                           shift and go to state 9
    vars_vect_mat                  shift and go to state 10
    tiposimple                     shift and go to state 11
    tipocompuesto                  shift and go to state 12
    vars_vect_mat_b                shift and go to state 13

state 5

    (34) tipocompuesto -> ID .

    ID              reduce using rule 34 (tipocompuesto -> ID .)


state 6

    (1) programa -> PROGRAM ID SC programa_a . bloque
    (36) bloque -> . OB bloque_a CB

    OB              shift and go to state 20

    bloque                         shift and go to state 19

state 7

    (2) programa_a -> programa_b .
    (3) programa_a -> programa_b . programa_a
    (2) programa_a -> . programa_b
    (3) programa_a -> . programa_b programa_a
    (4) programa_a -> . empty
    (5) programa_b -> . vars
    (6) programa_b -> . vars_vect_mat
    (134) empty -> .
    (7) vars -> . tiposimple vars_a SC
    (8) vars -> . tipocompuesto vars_a SC
    (14) vars_vect_mat -> . vars_vect_mat_b vars_vect_mat_a SC
    (15) vars_vect_mat -> . vars_vect_mat_b vars_vect_mat_a vars_vect_mat_d SC
    (30) tiposimple -> . INT
    (31) tiposimple -> . FLOAT
    (32) tiposimple -> . CHAR
    (33) tipocompuesto -> . DATAFRAME
    (34) tipocompuesto -> . ID
    (35) tipocompuesto -> . FILE
    (17) vars_vect_mat_b -> . tiposimple ID

  ! reduce/reduce conflict for OB resolved using rule 2 (programa_a -> programa_b .)
    OB              reduce using rule 2 (programa_a -> programa_b .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    ID              shift and go to state 5
    FILE            shift and go to state 18

  ! OB              [ reduce using rule 134 (empty -> .) ]

    programa_b                     shift and go to state 7
    programa_a                     shift and go to state 21
    empty                          shift and go to state 8
    vars                           shift and go to state 9
    vars_vect_mat                  shift and go to state 10
    tiposimple                     shift and go to state 11
    tipocompuesto                  shift and go to state 12
    vars_vect_mat_b                shift and go to state 13

state 8

    (4) programa_a -> empty .

    OB              reduce using rule 4 (programa_a -> empty .)


state 9

    (5) programa_b -> vars .

    INT             reduce using rule 5 (programa_b -> vars .)
    FLOAT           reduce using rule 5 (programa_b -> vars .)
    CHAR            reduce using rule 5 (programa_b -> vars .)
    DATAFRAME       reduce using rule 5 (programa_b -> vars .)
    ID              reduce using rule 5 (programa_b -> vars .)
    FILE            reduce using rule 5 (programa_b -> vars .)
    OB              reduce using rule 5 (programa_b -> vars .)


state 10

    (6) programa_b -> vars_vect_mat .

    INT             reduce using rule 6 (programa_b -> vars_vect_mat .)
    FLOAT           reduce using rule 6 (programa_b -> vars_vect_mat .)
    CHAR            reduce using rule 6 (programa_b -> vars_vect_mat .)
    DATAFRAME       reduce using rule 6 (programa_b -> vars_vect_mat .)
    ID              reduce using rule 6 (programa_b -> vars_vect_mat .)
    FILE            reduce using rule 6 (programa_b -> vars_vect_mat .)
    OB              reduce using rule 6 (programa_b -> vars_vect_mat .)


state 11

    (7) vars -> tiposimple . vars_a SC
    (17) vars_vect_mat_b -> tiposimple . ID
    (9) vars_a -> . vars_b
    (10) vars_a -> . vars_c vars_a
    (11) vars_b -> . ID
    (12) vars_b -> . ID EQ expresion
    (13) vars_c -> . vars_b COMMA

    ID              shift and go to state 23

    vars_a                         shift and go to state 22
    vars_b                         shift and go to state 24
    vars_c                         shift and go to state 25

state 12

    (8) vars -> tipocompuesto . vars_a SC
    (9) vars_a -> . vars_b
    (10) vars_a -> . vars_c vars_a
    (11) vars_b -> . ID
    (12) vars_b -> . ID EQ expresion
    (13) vars_c -> . vars_b COMMA

    ID              shift and go to state 27

    vars_a                         shift and go to state 26
    vars_b                         shift and go to state 24
    vars_c                         shift and go to state 25

state 13

    (14) vars_vect_mat -> vars_vect_mat_b . vars_vect_mat_a SC
    (15) vars_vect_mat -> vars_vect_mat_b . vars_vect_mat_a vars_vect_mat_d SC
    (16) vars_vect_mat_a -> . vars_vect_mat_c exp CSB
    (18) vars_vect_mat_c -> . OSB

    OSB             shift and go to state 30

    vars_vect_mat_a                shift and go to state 28
    vars_vect_mat_c                shift and go to state 29

state 14

    (30) tiposimple -> INT .

    ID              reduce using rule 30 (tiposimple -> INT .)


state 15

    (31) tiposimple -> FLOAT .

    ID              reduce using rule 31 (tiposimple -> FLOAT .)


state 16

    (32) tiposimple -> CHAR .

    ID              reduce using rule 32 (tiposimple -> CHAR .)


state 17

    (33) tipocompuesto -> DATAFRAME .

    ID              reduce using rule 33 (tipocompuesto -> DATAFRAME .)


state 18

    (35) tipocompuesto -> FILE .

    ID              reduce using rule 35 (tipocompuesto -> FILE .)


state 19

    (1) programa -> PROGRAM ID SC programa_a bloque .

    $end            reduce using rule 1 (programa -> PROGRAM ID SC programa_a bloque .)


state 20

    (36) bloque -> OB . bloque_a CB
    (37) bloque_a -> . estatuto bloque_a
    (38) bloque_a -> . estatuto
    (39) bloque_a -> . empty
    (40) estatuto -> . asignacion
    (41) estatuto -> . condicion
    (42) estatuto -> . llamada SC
    (43) estatuto -> . while
    (44) estatuto -> . for
    (45) estatuto -> . classcreate
    (46) estatuto -> . vars
    (47) estatuto -> . classdeclare
    (48) estatuto -> . llamadafuncionclase
    (49) estatuto -> . function
    (50) estatuto -> . return
    (51) estatuto -> . print
    (134) empty -> .
    (115) asignacion -> . ID EQ expresion SC
    (116) asignacion -> . array_access EQ expresion SC
    (106) condicion -> . condicion_c bloque condicion_a
    (79) llamada -> . llamada_d llamada_a CP
    (64) while -> . while_b bloque
    (73) for -> . for_a for_b bloque
    (98) classcreate -> . CLASS CLASS_ID OB classcreate_a function classcreate_c CB
    (7) vars -> . tiposimple vars_a SC
    (8) vars -> . tipocompuesto vars_a SC
    (113) classdeclare -> . CLASS_ID ID SC
    (114) llamadafuncionclase -> . ID POINT llamada
    (118) function -> . DEF function_e bloque
    (52) return -> . RETURN expresion SC
    (89) print -> . PRINT OP expresion CP SC
    (128) array_access -> . array_access_c array_access_d exp CSB
    (129) array_access -> . array_access_c
    (111) condicion_c -> . IF OP exp CP
    (85) llamada_d -> . llamada_c OP
    (66) while_b -> . while_a OP expresion CP
    (74) for_a -> . FOR
    (30) tiposimple -> . INT
    (31) tiposimple -> . FLOAT
    (32) tiposimple -> . CHAR
    (33) tipocompuesto -> . DATAFRAME
    (34) tipocompuesto -> . ID
    (35) tipocompuesto -> . FILE
    (132) array_access_c -> . array_access_b exp CSB
    (84) llamada_c -> . ID
    (65) while_a -> . WHILE
    (131) array_access_b -> . array_access_a OSB
    (130) array_access_a -> . ID

    CB              reduce using rule 134 (empty -> .)
    ID              shift and go to state 46
    CLASS           shift and go to state 52
    CLASS_ID        shift and go to state 53
    DEF             shift and go to state 55
    RETURN          shift and go to state 56
    PRINT           shift and go to state 57
    IF              shift and go to state 59
    FOR             shift and go to state 62
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    FILE            shift and go to state 18
    WHILE           shift and go to state 64

    bloque_a                       shift and go to state 31
    estatuto                       shift and go to state 32
    empty                          shift and go to state 33
    asignacion                     shift and go to state 34
    condicion                      shift and go to state 35
    llamada                        shift and go to state 36
    while                          shift and go to state 37
    for                            shift and go to state 38
    classcreate                    shift and go to state 39
    vars                           shift and go to state 40
    classdeclare                   shift and go to state 41
    llamadafuncionclase            shift and go to state 42
    function                       shift and go to state 43
    return                         shift and go to state 44
    print                          shift and go to state 45
    array_access                   shift and go to state 47
    condicion_c                    shift and go to state 48
    llamada_d                      shift and go to state 49
    while_b                        shift and go to state 50
    for_a                          shift and go to state 51
    tiposimple                     shift and go to state 54
    tipocompuesto                  shift and go to state 12
    array_access_c                 shift and go to state 58
    llamada_c                      shift and go to state 60
    while_a                        shift and go to state 61
    array_access_b                 shift and go to state 63
    array_access_a                 shift and go to state 65

state 21

    (3) programa_a -> programa_b programa_a .

    OB              reduce using rule 3 (programa_a -> programa_b programa_a .)


state 22

    (7) vars -> tiposimple vars_a . SC

    SC              shift and go to state 66


state 23

    (17) vars_vect_mat_b -> tiposimple ID .
    (11) vars_b -> ID .
    (12) vars_b -> ID . EQ expresion

    OSB             reduce using rule 17 (vars_vect_mat_b -> tiposimple ID .)
    COMMA           reduce using rule 11 (vars_b -> ID .)
    SC              reduce using rule 11 (vars_b -> ID .)
    EQ              shift and go to state 67


state 24

    (9) vars_a -> vars_b .
    (13) vars_c -> vars_b . COMMA

    SC              reduce using rule 9 (vars_a -> vars_b .)
    COMMA           shift and go to state 68


state 25

    (10) vars_a -> vars_c . vars_a
    (9) vars_a -> . vars_b
    (10) vars_a -> . vars_c vars_a
    (11) vars_b -> . ID
    (12) vars_b -> . ID EQ expresion
    (13) vars_c -> . vars_b COMMA

    ID              shift and go to state 27

    vars_c                         shift and go to state 25
    vars_a                         shift and go to state 69
    vars_b                         shift and go to state 24

state 26

    (8) vars -> tipocompuesto vars_a . SC

    SC              shift and go to state 70


state 27

    (11) vars_b -> ID .
    (12) vars_b -> ID . EQ expresion

    COMMA           reduce using rule 11 (vars_b -> ID .)
    SC              reduce using rule 11 (vars_b -> ID .)
    EQ              shift and go to state 67


state 28

    (14) vars_vect_mat -> vars_vect_mat_b vars_vect_mat_a . SC
    (15) vars_vect_mat -> vars_vect_mat_b vars_vect_mat_a . vars_vect_mat_d SC
    (19) vars_vect_mat_d -> . OSB exp CSB

    SC              shift and go to state 71
    OSB             shift and go to state 73

    vars_vect_mat_d                shift and go to state 72

state 29

    (16) vars_vect_mat_a -> vars_vect_mat_c . exp CSB
    (67) exp -> . and_exp
    (68) exp -> . exp_b exp
    (70) and_exp -> . expresion
    (71) and_exp -> . and_exp_b and_exp
    (69) exp_b -> . and_exp OR
    (53) expresion -> . m_exp
    (54) expresion -> . m_exp expresion_a m_exp
    (72) and_exp_b -> . expresion AND
    (20) m_exp -> . m_exp_b
    (21) m_exp -> . m_exp_b m_exp_a m_exp
    (24) m_exp_b -> . term
    (25) term -> . term_b
    (26) term -> . term_b term_a term
    (29) term_b -> . fact
    (90) fact -> . OP fact_a exp CP
    (91) fact -> . CTE_I
    (92) fact -> . CTE_F
    (93) fact -> . CTE_CHAR
    (94) fact -> . ID
    (95) fact -> . llamada
    (96) fact -> . array_access
    (79) llamada -> . llamada_d llamada_a CP
    (128) array_access -> . array_access_c array_access_d exp CSB
    (129) array_access -> . array_access_c
    (85) llamada_d -> . llamada_c OP
    (132) array_access_c -> . array_access_b exp CSB
    (84) llamada_c -> . ID
    (131) array_access_b -> . array_access_a OSB
    (130) array_access_a -> . ID

    OP              shift and go to state 84
    CTE_I           shift and go to state 85
    CTE_F           shift and go to state 86
    CTE_CHAR        shift and go to state 87
    ID              shift and go to state 88

    exp                            shift and go to state 74
    and_exp                        shift and go to state 75
    exp_b                          shift and go to state 76
    expresion                      shift and go to state 77
    and_exp_b                      shift and go to state 78
    m_exp                          shift and go to state 79
    m_exp_b                        shift and go to state 80
    term                           shift and go to state 81
    term_b                         shift and go to state 82
    fact                           shift and go to state 83
    llamada                        shift and go to state 89
    array_access                   shift and go to state 90
    llamada_d                      shift and go to state 49
    array_access_c                 shift and go to state 58
    llamada_c                      shift and go to state 60
    array_access_b                 shift and go to state 63
    array_access_a                 shift and go to state 65

state 30

    (18) vars_vect_mat_c -> OSB .

    OP              reduce using rule 18 (vars_vect_mat_c -> OSB .)
    CTE_I           reduce using rule 18 (vars_vect_mat_c -> OSB .)
    CTE_F           reduce using rule 18 (vars_vect_mat_c -> OSB .)
    CTE_CHAR        reduce using rule 18 (vars_vect_mat_c -> OSB .)
    ID              reduce using rule 18 (vars_vect_mat_c -> OSB .)


state 31

    (36) bloque -> OB bloque_a . CB

    CB              shift and go to state 91


state 32

    (37) bloque_a -> estatuto . bloque_a
    (38) bloque_a -> estatuto .
    (37) bloque_a -> . estatuto bloque_a
    (38) bloque_a -> . estatuto
    (39) bloque_a -> . empty
    (40) estatuto -> . asignacion
    (41) estatuto -> . condicion
    (42) estatuto -> . llamada SC
    (43) estatuto -> . while
    (44) estatuto -> . for
    (45) estatuto -> . classcreate
    (46) estatuto -> . vars
    (47) estatuto -> . classdeclare
    (48) estatuto -> . llamadafuncionclase
    (49) estatuto -> . function
    (50) estatuto -> . return
    (51) estatuto -> . print
    (134) empty -> .
    (115) asignacion -> . ID EQ expresion SC
    (116) asignacion -> . array_access EQ expresion SC
    (106) condicion -> . condicion_c bloque condicion_a
    (79) llamada -> . llamada_d llamada_a CP
    (64) while -> . while_b bloque
    (73) for -> . for_a for_b bloque
    (98) classcreate -> . CLASS CLASS_ID OB classcreate_a function classcreate_c CB
    (7) vars -> . tiposimple vars_a SC
    (8) vars -> . tipocompuesto vars_a SC
    (113) classdeclare -> . CLASS_ID ID SC
    (114) llamadafuncionclase -> . ID POINT llamada
    (118) function -> . DEF function_e bloque
    (52) return -> . RETURN expresion SC
    (89) print -> . PRINT OP expresion CP SC
    (128) array_access -> . array_access_c array_access_d exp CSB
    (129) array_access -> . array_access_c
    (111) condicion_c -> . IF OP exp CP
    (85) llamada_d -> . llamada_c OP
    (66) while_b -> . while_a OP expresion CP
    (74) for_a -> . FOR
    (30) tiposimple -> . INT
    (31) tiposimple -> . FLOAT
    (32) tiposimple -> . CHAR
    (33) tipocompuesto -> . DATAFRAME
    (34) tipocompuesto -> . ID
    (35) tipocompuesto -> . FILE
    (132) array_access_c -> . array_access_b exp CSB
    (84) llamada_c -> . ID
    (65) while_a -> . WHILE
    (131) array_access_b -> . array_access_a OSB
    (130) array_access_a -> . ID

  ! reduce/reduce conflict for CB resolved using rule 38 (bloque_a -> estatuto .)
    CB              reduce using rule 38 (bloque_a -> estatuto .)
    ID              shift and go to state 46
    CLASS           shift and go to state 52
    CLASS_ID        shift and go to state 53
    DEF             shift and go to state 55
    RETURN          shift and go to state 56
    PRINT           shift and go to state 57
    IF              shift and go to state 59
    FOR             shift and go to state 62
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    FILE            shift and go to state 18
    WHILE           shift and go to state 64

  ! CB              [ reduce using rule 134 (empty -> .) ]

    estatuto                       shift and go to state 32
    bloque_a                       shift and go to state 92
    empty                          shift and go to state 33
    asignacion                     shift and go to state 34
    condicion                      shift and go to state 35
    llamada                        shift and go to state 36
    while                          shift and go to state 37
    for                            shift and go to state 38
    classcreate                    shift and go to state 39
    vars                           shift and go to state 40
    classdeclare                   shift and go to state 41
    llamadafuncionclase            shift and go to state 42
    function                       shift and go to state 43
    return                         shift and go to state 44
    print                          shift and go to state 45
    array_access                   shift and go to state 47
    condicion_c                    shift and go to state 48
    llamada_d                      shift and go to state 49
    while_b                        shift and go to state 50
    for_a                          shift and go to state 51
    tiposimple                     shift and go to state 54
    tipocompuesto                  shift and go to state 12
    array_access_c                 shift and go to state 58
    llamada_c                      shift and go to state 60
    while_a                        shift and go to state 61
    array_access_b                 shift and go to state 63
    array_access_a                 shift and go to state 65

state 33

    (39) bloque_a -> empty .

    CB              reduce using rule 39 (bloque_a -> empty .)


state 34

    (40) estatuto -> asignacion .

    ID              reduce using rule 40 (estatuto -> asignacion .)
    CLASS           reduce using rule 40 (estatuto -> asignacion .)
    CLASS_ID        reduce using rule 40 (estatuto -> asignacion .)
    DEF             reduce using rule 40 (estatuto -> asignacion .)
    RETURN          reduce using rule 40 (estatuto -> asignacion .)
    PRINT           reduce using rule 40 (estatuto -> asignacion .)
    IF              reduce using rule 40 (estatuto -> asignacion .)
    FOR             reduce using rule 40 (estatuto -> asignacion .)
    INT             reduce using rule 40 (estatuto -> asignacion .)
    FLOAT           reduce using rule 40 (estatuto -> asignacion .)
    CHAR            reduce using rule 40 (estatuto -> asignacion .)
    DATAFRAME       reduce using rule 40 (estatuto -> asignacion .)
    FILE            reduce using rule 40 (estatuto -> asignacion .)
    WHILE           reduce using rule 40 (estatuto -> asignacion .)
    CB              reduce using rule 40 (estatuto -> asignacion .)


state 35

    (41) estatuto -> condicion .

    ID              reduce using rule 41 (estatuto -> condicion .)
    CLASS           reduce using rule 41 (estatuto -> condicion .)
    CLASS_ID        reduce using rule 41 (estatuto -> condicion .)
    DEF             reduce using rule 41 (estatuto -> condicion .)
    RETURN          reduce using rule 41 (estatuto -> condicion .)
    PRINT           reduce using rule 41 (estatuto -> condicion .)
    IF              reduce using rule 41 (estatuto -> condicion .)
    FOR             reduce using rule 41 (estatuto -> condicion .)
    INT             reduce using rule 41 (estatuto -> condicion .)
    FLOAT           reduce using rule 41 (estatuto -> condicion .)
    CHAR            reduce using rule 41 (estatuto -> condicion .)
    DATAFRAME       reduce using rule 41 (estatuto -> condicion .)
    FILE            reduce using rule 41 (estatuto -> condicion .)
    WHILE           reduce using rule 41 (estatuto -> condicion .)
    CB              reduce using rule 41 (estatuto -> condicion .)


state 36

    (42) estatuto -> llamada . SC

    SC              shift and go to state 93


state 37

    (43) estatuto -> while .

    ID              reduce using rule 43 (estatuto -> while .)
    CLASS           reduce using rule 43 (estatuto -> while .)
    CLASS_ID        reduce using rule 43 (estatuto -> while .)
    DEF             reduce using rule 43 (estatuto -> while .)
    RETURN          reduce using rule 43 (estatuto -> while .)
    PRINT           reduce using rule 43 (estatuto -> while .)
    IF              reduce using rule 43 (estatuto -> while .)
    FOR             reduce using rule 43 (estatuto -> while .)
    INT             reduce using rule 43 (estatuto -> while .)
    FLOAT           reduce using rule 43 (estatuto -> while .)
    CHAR            reduce using rule 43 (estatuto -> while .)
    DATAFRAME       reduce using rule 43 (estatuto -> while .)
    FILE            reduce using rule 43 (estatuto -> while .)
    WHILE           reduce using rule 43 (estatuto -> while .)
    CB              reduce using rule 43 (estatuto -> while .)


state 38

    (44) estatuto -> for .

    ID              reduce using rule 44 (estatuto -> for .)
    CLASS           reduce using rule 44 (estatuto -> for .)
    CLASS_ID        reduce using rule 44 (estatuto -> for .)
    DEF             reduce using rule 44 (estatuto -> for .)
    RETURN          reduce using rule 44 (estatuto -> for .)
    PRINT           reduce using rule 44 (estatuto -> for .)
    IF              reduce using rule 44 (estatuto -> for .)
    FOR             reduce using rule 44 (estatuto -> for .)
    INT             reduce using rule 44 (estatuto -> for .)
    FLOAT           reduce using rule 44 (estatuto -> for .)
    CHAR            reduce using rule 44 (estatuto -> for .)
    DATAFRAME       reduce using rule 44 (estatuto -> for .)
    FILE            reduce using rule 44 (estatuto -> for .)
    WHILE           reduce using rule 44 (estatuto -> for .)
    CB              reduce using rule 44 (estatuto -> for .)


state 39

    (45) estatuto -> classcreate .

    ID              reduce using rule 45 (estatuto -> classcreate .)
    CLASS           reduce using rule 45 (estatuto -> classcreate .)
    CLASS_ID        reduce using rule 45 (estatuto -> classcreate .)
    DEF             reduce using rule 45 (estatuto -> classcreate .)
    RETURN          reduce using rule 45 (estatuto -> classcreate .)
    PRINT           reduce using rule 45 (estatuto -> classcreate .)
    IF              reduce using rule 45 (estatuto -> classcreate .)
    FOR             reduce using rule 45 (estatuto -> classcreate .)
    INT             reduce using rule 45 (estatuto -> classcreate .)
    FLOAT           reduce using rule 45 (estatuto -> classcreate .)
    CHAR            reduce using rule 45 (estatuto -> classcreate .)
    DATAFRAME       reduce using rule 45 (estatuto -> classcreate .)
    FILE            reduce using rule 45 (estatuto -> classcreate .)
    WHILE           reduce using rule 45 (estatuto -> classcreate .)
    CB              reduce using rule 45 (estatuto -> classcreate .)


state 40

    (46) estatuto -> vars .

    ID              reduce using rule 46 (estatuto -> vars .)
    CLASS           reduce using rule 46 (estatuto -> vars .)
    CLASS_ID        reduce using rule 46 (estatuto -> vars .)
    DEF             reduce using rule 46 (estatuto -> vars .)
    RETURN          reduce using rule 46 (estatuto -> vars .)
    PRINT           reduce using rule 46 (estatuto -> vars .)
    IF              reduce using rule 46 (estatuto -> vars .)
    FOR             reduce using rule 46 (estatuto -> vars .)
    INT             reduce using rule 46 (estatuto -> vars .)
    FLOAT           reduce using rule 46 (estatuto -> vars .)
